BlockBuildingError.java + TestBlocks